methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:5: error: not found: value poseBrosse
  poseBrosse()
  ^PictureMono1:10: error: not found: value poseBrosse
  poseBrosse()
  ^PictureMono1:15: error: not found: value poseBrosse
  poseBrosse()
  ^