methods.picture.PictureMono1.scala.code



def faireV(){
  poseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  poseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  poseBrosse()
  leveBrosse()
  
}